--- a/public/index.html
+++ b/public/index.html
@@ -11,11 +11,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#6c63ff" />
     <meta
-      name="Saad Pasta Portfolio"
+      name="Avish Mehta Portfolio"
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png?v8=qAJ44G5Bm7">
-    <meta property="og:title" content="Saad Pasta Portfolio" />
+    <meta property="og:title" content="Avish Mehta Portfolio" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://developerfolio.js.org/" />
     <meta property="og:image" content="https://developerfolio.js.org/static/media/developerActivity.59389695.svg" />
